<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailsCoordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nishat.vconfess.ui.DetailsCollectorActivity">

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <LinearLayout
                android:id="@+id/departmentLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/department"
                    android:textSize="24sp" />

                <RadioGroup
                    android:id="@+id/departmentRadioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/informationTechonlogyRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/inft"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/computerScienceRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cs"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/electronicsRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/extc"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/electricalRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/etrx"
                        android:textSize="18sp" />

                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/departmentLinearLayout"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/yearLinearLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/year"
                        android:textSize="24sp" />

                    <RadioGroup
                        android:id="@+id/yearRadioGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/feRadioButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fe"
                            android:textSize="18sp" />

                        <RadioButton
                            android:id="@+id/seRadioButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/se"
                            android:textSize="18sp" />

                        <RadioButton
                            android:id="@+id/teRadioButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/te"
                            android:textSize="18sp" />

                        <RadioButton
                            android:id="@+id/beRadioButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/be"
                            android:textSize="18sp" />
                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/division"
                        android:textSize="24sp" />

                    <RadioGroup
                        android:id="@+id/divisionRadioGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/aRadioButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="A"
                            android:textSize="18sp" />

                        <RadioButton
                            android:id="@+id/bRadioButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="B"
                            android:textSize="18sp" />

                        <RadioButton
                            android:id="@+id/cRadioButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="C"
                            android:textSize="18sp" />

                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/genderLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearLayout"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/gender"
                    android:textSize="24sp" />

                <RadioGroup
                    android:id="@+id/genderRadioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/maleRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/femaleRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female"
                        android:textSize="18sp" />

                </RadioGroup>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/saveFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/ic_done_white_24dp" />
</android.support.design.widget.CoordinatorLayout>



